# files

./: Cargo.toml  build.rs  rinja.toml
configuration/: config.toml
frontend/: _layout.html  file-list.html  index.html  input.css  pnpm-lock.yaml  style.css
frontend/assets/js/: chart.js@4.4.8.js  chart.js@4.4.8.min.js  tailwind@4.0.9.js
src/: configuration.rs  error.rs  lib.rs  main.rs  sorting.rs  tracing.rs
src/routes/: delete.rs  file_list.rs  foo.rs  index.rs  mod.rs  video.rs
src/users/: mod.rs
