[package]
name = "files"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "files"
edition = "2024"

[lib]
name = "files"
path = "src/lib.rs"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["http2"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "net", "fs", "signal"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
tower-http = { version = "0.6.2", features = ["timeout", "trace", "fs"] }
rinja = "0.3.5"
sqlx = { version = "0.8.3", features = ["sqlite"] }
uuid = { version = "1.13.2", features = ["v4"] }
humansize = "2.1.3"
serde = { version = "1.0.218", features = ["derive"] }
notify = "8.0.0"
